Trying to fix sidebar overlap issue.

--- a/src/app/layouts/default/default.component.scss
+++ b/src/app/layouts/default/default.component.scss
@@ -2,10 +2,20 @@
 // https://stackblitz.com/angular/xeogrgyovma?file=app%2Fsidenav-autosize-example.css
 
 .example-container {
-    width: 500px;
-    height: 300px;
+    // width: 500px;
+    height: 100%;
     border: 1px solid rgba(0, 0, 0, 0.5);
   }
+
+  // NO, lose header and footer
+  // .example-container {
+  //   position: absolute;
+  //   top: 0;
+  //   bottom: 0;
+  //   left: 0;
+  //   right: 0;
+  //   background: #eee;
+  // }
   
   .example-sidenav-content {
     display: flex;
@@ -18,3 +28,5 @@
     padding: 20px;
   }
 
+  // .app-sidenav { display: flex; }
+  // .mat-drawer-container { flex: 1 1 auto; }
